fix index flex wrap bug. display 3 instead of 2 per row

--- a/app/assets/stylesheets/api/project_index.scss
+++ b/app/assets/stylesheets/api/project_index.scss
@@ -68,7 +68,7 @@
 
 .project-cover-container{
   height: 300px;
-  width: 33vw;
+  width: 32vw;
 
   display: flex;
   flex-direction: column;
@@ -78,8 +78,8 @@
 
 .project-cover-picture{
   background: white;
-  height: 90%;
-  width: 90%;
+  height: 87%;
+  width: 91%;
   object-fit: cover;
   transition-timing-function: linear;
   -webkit-transition: width .35s, height .35s;
